cmake_minimum_required(VERSION 3.6)

set(CMAKE_CXX_STANDARD 11)
project("test_prog")
add_executable(test_prog main.cc)

install(TARGETS test_prog RUNTIME DESTINATION bin)
#set(CPACK_GENERATOR RPM)
set(CPACK_GENERATOR DEB)
#set(CPACK_RPM_PACKAGE_ARCHITECTURE "i586")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "i586")
set(CPACK_PACKAGE_VERSION_MAJOR 0)
set(CPACK_PACKAGE_VERSION_MINOR 0)
set(CPACK_PACKAGE_VERSION_PATCH 1)
set(CPACK_PACKAGE_CONTACT un9021@yandex.ru)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
include (CPack)
